# meeting-recorder-summarizer

./: .gitignore  Containerfile  README.md  check_ffmpeg.py  pyproject.toml
.kiro/specs/meeting-recorder/: .config.kiro  design.md  requirements.md  tasks.md
meeting_recorder/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  pipeline.py  recorder.py  service.py  storage.py  summarizer.py  transcriber.py
scripts/: hotkey_controller.sh  install.sh
systemd/: meeting-recorder-summarizer.container
tests/: __init__.py  test_config.py  test_pipeline.py  test_recorder.py  test_service.py  test_storage.py  test_summarizer.py  test_transcriber.py  test_windows_cleanup.py
