[project]
name = "meeting-recorder-summarizer"
version = "0.1.0"
description = "Herramienta de grabación de reuniones con transcripción Whisper y resúmenes OpenAI para Fedora Silverblue"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-whisper>=20250625",
    "openai>=1.0.0",
    # torch CPU por defecto; para CUDA cambia el índice a pytorch-cu128
    "torch",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

# Torch CPU (sin CUDA) — más ligero, suficiente para la mayoría de equipos
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# Descomenta y cambia torch source a pytorch-cu128 para habilitar CUDA:
# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/cu128"
# explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meeting_recorder"]
